removed unused classnames from gid cell

--- a/code/Views/Foundation/Grid/Cell.cshtml
+++ b/code/Views/Foundation/Grid/Cell.cshtml
@@ -32,6 +32,6 @@
     }
 }
 
-<div class="cell @smallClass @mediumClass @largeClass @strokeTopClass @strokeRightClass @strokeBottomClass @strokeLeftClass @verticalAlignmentClass">
+<div class="cell @smallClass @mediumClass @largeClass">
     @Html.Sitecore().DynamicPlaceholder("content")
 </div>
